# omp-desktop

./: .gitattributes  .gitignore  C.txt  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  test-rpc.mjs
.github/workflows/: ci.yml  release.yml
design/: plan-mode-mockup.html
docs/plans/: 2026-05-08-pi-desktop-tauri.md
docs/superpowers/specs/: 2026-05-09-plan-mode-design.md
src/: adapter.js  app-live.jsx  index.html  live.js  model-names.js  platform.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: agent.rs  git.rs  git_watcher.rs  lib.rs  main.rs
src-tauri/src/agent/: inner.rs  mod.rs  reader.rs  spawn.rs
src/app/: constants.js  use-bridge-snapshot.jsx
src/design/: OMP Desktop.html  app.jsx  chat.jsx  chrome.jsx  composer.jsx  data.js  layout.css  panels.jsx  styles.css  ui.jsx
src/design/chat/: ask-bubble.jsx  assistant-bubble.jsx  chat-view.jsx  eval-cell.jsx  tool-card.jsx  user-bubble.jsx
src/design/icons/: README.md  icons.tsx  manifest.json
src/design/layout/: _index.css  chat.css  chrome.css  composer.css  overlays.css  rail.css  stage.css
src/design/tweaks/: controls.jsx  panel.jsx  style.js  use-tweaks.js
src/design/ui/: icons.jsx  markdown.jsx  plan-annotations.jsx  sparks.jsx
